MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/Business_Process__c.object-meta.xml
<CustomObject>
    <label>Business Process</label>
    <nameField>
        <displayFormat>BP-{0000000}</displayFormat>
        <label>Business Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>