MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>