MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Actual_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Installment_Date__c</fullName>
    <formula>Service_Request__r.Actual_Installment_Date__c</formula>
    <label>Actual Installment Date</label>
    <type>Date</type>
</CustomField>