MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/ADM_Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>ADM_Refund_Type__c</fullName>
    <label>ADM Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>