MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <label>Ageing</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>