MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Approval_Justification__c.field-meta.xml
<CustomField>
    <fullName>Approval_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>