MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/BP_Sync_Ids__c.field-meta.xml
<CustomField>
    <fullName>BP_Sync_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BP Sync Ids</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>