MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/BP_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>BP_Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Completed</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
            <value>
                <fullName>Not Yet Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>