MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <label>Cancellation Type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation with Refund</fullName>
            </value>
            <value>
                <fullName>Cancellation without Refund</fullName>
            </value>
            <value>
                <fullName>Consolidation Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>