MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>