MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>Charge__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>