MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Collections_Discussion_OutCome__c.field-meta.xml
<CustomField>
    <fullName>Collections_Discussion_OutCome__c</fullName>
    <label>Collections Discussion OutCome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Agreed To Pay</fullName>
            </value>
            <value>
                <fullName>Customer Provided POP</fullName>
            </value>
            <value>
                <fullName>Customer Provided New Check</fullName>
            </value>
            <value>
                <fullName>Proceed with Default Action</fullName>
            </value>
            <value>
                <fullName>Close the Process</fullName>
                <isActive>false</isActive>
                <label>Close the Process</label>
            </value>
            <value>
                <fullName>Proceed Further</fullName>
                <isActive>false</isActive>
                <label>Proceed Further</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>