MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/CRM_Manager_decision__c.field-meta.xml
<CustomField>
    <fullName>CRM_Manager_decision__c</fullName>
    <label>CRM Manager decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceed with default notification</fullName>
            </value>
            <value>
                <fullName>Proceed without default notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>