MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Current_Business_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Business_Process_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Business Process Step</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>