MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Current_Business_Process_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Business_Process_Step_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Business Process Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>