MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Current_Business_process_StepName__c.field-meta.xml
<CustomField>
    <fullName>Current_Business_process_StepName__c</fullName>
    <formula>Current_Business_Process_Step__r.Business_Process_Steps_Name_Custom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Business process StepName</label>
    <type>Text</type>
</CustomField>