MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Current_Business_Process_Steps_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Business_Process_Steps_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Business Process Steps Name</label>
    <type>TextArea</type>
</CustomField>