MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/current_step_created_date__c.field-meta.xml
<CustomField>
    <fullName>current_step_created_date__c</fullName>
    <formula>Current_Business_Process_Step__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>current step created date</label>
    <type>DateTime</type>
</CustomField>