MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Current_Step_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Queue_Name__c</fullName>
    <formula>Current_Business_Process_Step__r.Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Step Queue Name</label>
    <type>Text</type>
</CustomField>