MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Current_Step_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Status__c</fullName>
    <formula>TEXT(Current_Business_Process_Step__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Step Status</label>
    <type>Text</type>
</CustomField>