MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Customer_Agreed_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreed_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Agreed Payment Date</label>
    <type>Date</type>
</CustomField>