MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Customer_Document_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Document_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Document Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>