MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Customer_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Customer_Follow_up__c</fullName>
    <label>Customer Follow-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>