MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/D_T_Customer_Discussion_Outcome__c.field-meta.xml
<CustomField>
    <fullName>D_T_Customer_Discussion_Outcome__c</fullName>
    <label>D&amp;T Customer Discussion Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Conditional Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancellation with Refund</fullName>
            </value>
            <value>
                <fullName>Cancellation Without Refund</fullName>
            </value>
            <value>
                <fullName>Property Transfer</fullName>
            </value>
            <value>
                <fullName>Payment Extension</fullName>
            </value>
            <value>
                <fullName>Escalate for further action</fullName>
            </value>
            <value>
                <fullName>Paid System Closed</fullName>
            </value>
            <value>
                <fullName>Customer Agreed To Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>