MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Default_Letter2_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Letter2_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Letter2 Sent Date</label>
    <type>DateTime</type>
</CustomField>