MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Default_letter_1_sent_date__c.field-meta.xml
<CustomField>
    <fullName>Default_letter_1_sent_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default letter 1 sent date</label>
    <type>Date</type>
</CustomField>