MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Default_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Default_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Tracker</label>
    <referenceTo>Default_Tracker__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>