MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Document_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload_Status__c</fullName>
    <label>Document Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Email Initiated</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>