MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Escalated_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Time__c</fullName>
    <formula>If (Total_Time__c -  Milestone_To_Complete_In_Hours__c &gt;0, Total_Time__c -  Milestone_To_Complete_In_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>