MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Exclude_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Admin_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Admin Fee</label>
    <type>Checkbox</type>
</CustomField>