MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Exclude_Admin_Fee_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Admin_Fee_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclude Admin Fee Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>