MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Forfeiture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Amount__c</fullName>
    <formula>IF(
    Type__c = &quot;Unit Cancellation and Release Process&quot;,
    IF(
        ISPICKVAL(ADM_Refund_Type__c, &quot;Both&quot;),
        0,
        IF(
            ISPICKVAL(ADM_Refund_Type__c, &quot;ADM&quot;),
            Total_Paid_Amount__c,
            IF(
                ISPICKVAL(ADM_Refund_Type__c, &quot;Down Payment&quot;),
                ADM_Paid_Amount__c,
                0
            )
        )
    ),
    0
)</formula>
    <label>Forfeiture Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>