MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Handover_Details__c.field-meta.xml
<CustomField>
    <fullName>Handover_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handover Details</label>
    <referenceTo>Handover_Details__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>