MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_ADM_Refund_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_ADM_Refund_Needed__c</fullName>
    <label>Is ADM Refund Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>