MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_check_List__c.field-meta.xml
<CustomField>
    <fullName>Is_check_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is check List</label>
    <type>Checkbox</type>
</CustomField>