MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_Check_List_Shown__c.field-meta.xml
<CustomField>
    <fullName>Is_Check_List_Shown__c</fullName>
    <formula>Latest_Process_Checklist__c == null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check List Shown</label>
    <type>Checkbox</type>
</CustomField>