MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_Eligible_to_sent_Default_2__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_to_sent_Default_2__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Default_Letter1_Sent_Date__c)),
    (TODAY() - DATEVALUE(Default_Letter1_Sent_Date__c)) &gt;= 15
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Eligible to sent Default 2</label>
    <type>Checkbox</type>
</CustomField>