MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalated__c</fullName>
    <formula>If( Total_Time__c -  Milestone_To_Complete_In_Hours__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>