MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_high_Priority_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_high_Priority_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is high Priority Case</label>
    <type>Checkbox</type>
</CustomField>