MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_Manual_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Request</label>
    <type>Checkbox</type>
</CustomField>