MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Is_Migration__c.field-meta.xml
<CustomField>
    <fullName>Is_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Migration</label>
    <type>Checkbox</type>
</CustomField>