MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/IsStepCreated__c.field-meta.xml
<CustomField>
    <fullName>IsStepCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStepCreated</label>
    <type>Checkbox</type>
</CustomField>