MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Latest_DocuSign_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_DocuSign_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest DocuSign Name</label>
    <type>TextArea</type>
</CustomField>