MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Latest_Nintex_Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>Latest_Nintex_Document_Generated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Nintex Document Generated</label>
    <length>250</length>
    <type>Text</type>
</CustomField>