MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Latest_Process_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Latest_Process_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Process Checklist</label>
    <referenceTo>Process_Checklist__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>