MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Latest_Process_Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Process_Checklist_Name__c</fullName>
    <formula>Latest_Process_Checklist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Process Checklist Name</label>
    <type>Text</type>
</CustomField>