MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Collections Step</fullName>
            </value>
            <value>
                <fullName>Court Order Issued</fullName>
            </value>
            <value>
                <fullName>Legal Cleared</fullName>
            </value>
            <value>
                <fullName>Submitted to Court</fullName>
            </value>
            <value>
                <fullName>Sent to external counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>