MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/LPC_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPC_Amount__c</fullName>
    <label>LPC Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>