MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/LPC_Charged_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPC_Charged_Amount__c</fullName>
    <formula>Charge__r.Amount__c</formula>
    <label>LPC Amount on Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>