MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/LPC_Waived_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPC_Waived_Amount__c</fullName>
    <formula>LPC_Amount__c - (LPC_Amount__c * Waiver_Percentage__c)</formula>
    <label>LPC Amount after Waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>