MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/LPC_Waiver_Approvals__c.field-meta.xml
<CustomField>
    <fullName>LPC_Waiver_Approvals__c</fullName>
    <label>LPC Waiver Approvals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CM Director Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CCO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CFO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CEO Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>