MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/LPCWaivedAmount__c.field-meta.xml
<CustomField>
    <fullName>LPCWaivedAmount__c</fullName>
    <formula>IF(
     Waiver_Percentage__c &gt; 0,
    MAX(LPC_Amount__c - LPC_Waived_Amount__c, 0),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPC Waived Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>