MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Milestone_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date_Formula__c</fullName>
    <formula>Sales_Order_Installment__r.MilestoneDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Date Formula</label>
    <type>Date</type>
</CustomField>