MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/MileStone_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>MileStone_Extension_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MileStone Extension Date</label>
    <type>Date</type>
</CustomField>