MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Milestone_To_Complete_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Milestone_To_Complete_In_Hours__c</fullName>
    <label>Milestone To Complete In Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>