MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Original_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Milestone_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Milestone Date</label>
    <type>Date</type>
</CustomField>