MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Parent_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Parent_Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Business Process</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>