MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Payable_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Customer__c</fullName>
    <formula>IF(
    ISPICKVAL(ADM_Refund_Type__c, &quot;Both&quot;),
    Down_Payment_Amount__c + ADM_Paid_Amount__c,
    IF(
        ISPICKVAL(ADM_Refund_Type__c, &quot;Down Payment&quot;),
        Down_Payment_Amount__c,
        IF(
            ISPICKVAL(ADM_Refund_Type__c, &quot;ADM&quot;),
            ADM_Paid_Amount__c,
            0
        )
    )
)</formula>
    <label>Payable to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>