MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Payment_Extension_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Extension_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Extension Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>