MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Payment_Extension_No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Extension_No_Of_Days__c</fullName>
    <formula>IF(
    OR(ISBLANK(Payment_Extension_Date__c), ISBLANK(Original_Milestone_Date__c)),
    0,
    Payment_Extension_Date__c - Original_Milestone_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Extension No Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>