MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Payment_Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Extension_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Extension Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>