MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Pending_QA_Snags__c.field-meta.xml
<CustomField>
    <fullName>Pending_QA_Snags__c</fullName>
    <label>Pending QA Snags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>