MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Previous_Business_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Previous_Business_Process_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Business Process Step</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Processes (Previous Business Process Step)</relationshipLabel>
    <relationshipName>Business_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>